修复断点续传接口，启动成功